stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_too_many_function_parameters.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "6b5b459445333ac0d89a15f2d8017fe8b1fdc54c86d32b46c6cc85e685a55664",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-params-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 1611,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 60265,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 1611,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 60265,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "5f019ae2d609b6052e68164d296a62b1d378bd99577a36443dc6fbcda94b22de",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-params-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 1611,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 60265,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 1611,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 60265,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8ba488c09d31d904bb854be6c99a37365f4175479672f294316ebee352d12981",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-params-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 1611,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 60265,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 1611,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 60265,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "04df16e1f66ae19e8e784465084fdf72be32d1a7a570187579c277154677af57",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-params-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: too many function parameters specified: found 257, the maximum is 256) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 269,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 36990,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 269,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 36990,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e912df8753953413cf03f5140638a2d14fad57d5d55342a37e925b1498a85baf",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-params-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: too many function parameters specified: found 257, the maximum is 256) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 269,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 36990,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 269,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 36990,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f091da615624ae416bb035ae023e916feff1c0c8308ebba8969b02fe2421d3bc",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-params-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: too many function parameters specified: found 257, the maximum is 256) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 269,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 36990,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 269,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 36990,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "84f8fd1233c72584994325db176e47da082a8bd1100d9a734a6e21eed8021c8f",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-params-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: too many function parameters specified: found 257, the maximum is 256) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 269,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 36990,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 269,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 36990,
    ),
  )),
]
