stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_trait_method_unknown.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "297dc663ad7d847523569414c9d38841085bc400785f4f6ddd860fc1b221f1f5",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: trait-method-unknown-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: method \'get-2\' unspecified in trait <trait-1>) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 25,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 5648,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 25,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 5648,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "072e24a7887a0e5e295368d029ca6f5c4fe81be5fd9756b1c554500ca9e09459",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: trait-method-unknown-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: method \'get-2\' unspecified in trait <trait-1>) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 25,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 5648,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 25,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 5648,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6e6a1fbc906c852f9dbb41727694719ba31a10d015a88bec1f625a7b8b661647",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: trait-method-unknown-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: method \'get-2\' unspecified in trait <trait-1>) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 25,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 5648,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 25,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 5648,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8f98efc3d0e9902aff899d3acf8c953bfa85b5c44777bd0c320f5438ac5d4f6a",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: trait-method-unknown-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: method \'get-2\' unspecified in trait <trait-1>) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 25,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 5648,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 25,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 5648,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7419f752c49f9f5076b396606195981cf117590f7609738542af264aa5b9761e",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: trait-method-unknown-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: method \'get-2\' unspecified in trait <trait-1>) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 25,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 5648,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 25,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 5648,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ff6457573bdd9bfd55e5a26f4048ffaf7584ad64caa93c1e2581a221792c80d2",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: trait-method-unknown-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: method \'get-2\' unspecified in trait <trait-1>) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 25,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 5648,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 25,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 5648,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "230b23e7a9c2f25bae550e4ca51e66fb671599e3bee6997423b754b008a14082",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: trait-method-unknown-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: method \'get-2\' unspecified in trait <trait-1>) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 25,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 5648,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 25,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 5648,
    ),
  )),
]
