stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_trait_too_many_methods.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "d908588ae336b7a6c33ed433cdf084f0ac1d05afca3da2d4f5fed60c40a84349",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-methods-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 12513,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 413869,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 12513,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 413869,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2d0ed096c554b964cd02a9e6fe324abc142add8030d02596751400951be56574",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-methods-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 12513,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 413869,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 12513,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 413869,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a4251994b4652ea7a2e9e75109d306b10a43f5b9d9331b3b0caae90c6b2da121",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-methods-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 12513,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 413869,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 12513,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 413869,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9f680b87815c32a02b903173bbdf7f399bda2c2c501ee903565f34faa0edc309",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-methods-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: too many trait methods specified: found 257, the maximum is 256) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2061,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 286544,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2061,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 286544,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0c615837eb5f03dd9d35e48ab6cd08cc44441007f503bd25bd416b1299a76b7c",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-methods-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: too many trait methods specified: found 257, the maximum is 256) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2061,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 286544,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2061,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 286544,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "19fce739e60ca24b7f6f9cad68a5e4fd7369fa62cb686eaebcefe4535496ce87",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-methods-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: too many trait methods specified: found 257, the maximum is 256) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2061,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 286544,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2061,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 286544,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "66091464ad1cdbbbe267993370ee466b261146b582cdc88adb14c862d4fbc7c6",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: too-many-methods-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: too many trait methods specified: found 257, the maximum is 256) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2061,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 286544,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2061,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 286544,
    ),
  )),
]
